# pdf-splitter

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: issue-opened.yaml  pr-opened.yaml  soliplex.yaml  trigger-docs-deploy.yml  trufflehog.yaml
examples/: demo_split.py
src/pdf_splitter/: __init__.py  cli.py  config_factory.py  logging_config.py  processor.py  reassembly.py  segmentation.py  segmentation_enhanced.py  validation.py
tests/: __init__.py  test_cli.py  test_concatenation.py  test_config_factory.py  test_integration.py  test_processor.py  test_reassembly.py  test_segmentation.py  test_smart_split.py
